--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,8 @@
         align-items: center;
         background-image: linear-gradient(rgba(255,255,255,0.12),rgba(255,255,255,0.1),rgba(255,255,255,0.15));
         border-bottom: 1px solid #000;
-        min-height: 1.8em;
+        min-height: 2em;
+        padding-left: 0.2em;
     }
 
     &red-button, &green-button, &yellow-button
@@ -53,5 +54,6 @@
     &code
     {
         line-height: 1.5;
+        font-family: Courier, monospace;
     }
 }
