--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@
         border-bottom: 1px solid #000;
         min-height: 2em;
         padding-left: 0.2em;
+        cursor: pointer;
     }
 
     &red-button, &green-button, &yellow-button
@@ -56,5 +57,26 @@
     {
         line-height: 1.5;
         font-family: Courier, "Courier New", monospace;
+    }
+
+    &click
+    {
+        opacity: 0;
+        margin-left: calc(50% - 3 * (0.5em + 0.72em));
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 0.72em;
+        text-transform: uppercase;
+        font-weight: 600;
+        text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
+        border-radius: 4px;
+        padding: 3px;
+        color: rgba(255, 255, 255, 0.5);
+        cursor: pointer;
+    }
+
+    &top:hover &click
+    {
+        opacity: 1;
+        display: inline-block;
     }
 }
