Disable the border of the pre elment.

--- a/src/index.scss
+++ b/src/index.scss
@@ -45,7 +45,8 @@
 
     &pre
     {
-        border-radius: 0.5em;
+        border-width: 0px !important;
+        border-radius: 0 0 0.5em 0.5em !important;
         margin: 0;
         padding: 0.5em;
         overflow-x: scroll;
